[workspace]

[package]
name = "lwd-warp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.86"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
prost = "0.11"
tokio-stream = "0.1.15"
tonic-reflection = "0.5"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite = "0.29"
#lazy_static = "1.5"
#tokio-stream = "0.1.7"
#futures-core = "0.3.30"
#parking_lot = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

zcash-warp = {path="../ywallet/native/zcash-warp"}
lazy_static = "1.5.0"

[dependencies.zcash_primitives]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "e2fe0b8d386fad99e00d6135c5caf3cc04045646"

[build-dependencies]
tonic-build = "0.8"

[patch.crates-io]
#zcash_note_encryption = { path = "librustzcash/components/zcash_note_encryption" }
zcash_note_encryption = { git = "https://github.com/hhanh00/librustzcash.git", rev = "e2fe0b8d386fad99e00d6135c5caf3cc04045646" }

# Android 32-bit fix
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
#orchard = { git = "https://github.com/zcash/orchard.git", rev = "6cbde279e90974201bedbd9b5ddf155e8f8b1e8e" }
orchard = { path = "../ywallet/orchard" }
