[package]
name = "lwd-warp"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
hex.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
serde.workspace = true
clap.workspace = true
clap-repl.workspace = true

zcash_primitives.workspace = true

tokio-stream = "0.1.15"
tonic-reflection = "0.12.2"
zcash-warp = {path="../zcash-warp"}

[build-dependencies]
tonic-build = "0.8"
